[package]
name = "one-billion-rows-challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.10.0"
twox-hash = "1.6.3"

[profile.release]
debug = 1

[build]
rustflags = ["-C", "symbol-mangling-version=v0"]
